--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,35 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#8bc6ec, #9599e2);
+}
+
+#container {
+  position: relative;
+  padding: 7px;
+  font-size: 25px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#tooltip-content {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  background: #000;
+  color: #fff;
+  white-space: nowrap;
+  padding: 10px 15px;
+  border-radius: 7px;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
