--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,17 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
+#tooltip-content::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  border: 15px solid;
+  border-color: #000 #000 #000 #000;
+}
+#container:hover #tooltip-content {
+  top: -150%;
+  visibility: visible;
+  opacity: 1;
+}
